--- a/asite/abondon/css/index.css
+++ b/asite/abondon/css/index.css
@@ -259,6 +259,7 @@
 
  .tabs-box {
      width: 700px;
+     max-width: 100vw;
      min-height: 240px;
      font-size: 14px;
      letter-spacing: 1.1px;
